--- a/assets/style.css
+++ b/assets/style.css
@@ -621,7 +621,7 @@ width: 300px;
   background-color: rgb(105 113 253);
 }
 .table-section .part-2 .table-scrollable-container table  tbody tr:nth-child(even){
-  background: rgb(228, 240, 245);
+  background: rgb(235, 240, 250);
 }
 .vue-star-rating{
   display: flex;
@@ -689,11 +689,11 @@ width: 300px;
   background-color: #4674C6;
   color: #fff;
   font-style: italic;
-  height: 30px;
+  height: 34px;
   padding: 0px 8px;
   border: none;
   outline: none;
-  width: 160px;
+  width: 100px;
   border-radius: 8px;
   font-weight: 600;
   margin-bottom: 2px;
@@ -716,7 +716,7 @@ font-weight: 700;
   align-items: center;
 }
 .purple-box{
-  height:50px;
+  height:25px;
   width: 100%;
   background-color: rgb(70, 117, 199);
   margin-bottom: 15px;
@@ -733,5 +733,126 @@ font-weight: 700;
 @media only screen and (min-width:1500px) {
   .table-scrollable-container{
     width: 80% !important;
+  }
+}
+.table-section .part-2 .table-scrollable-container table td .col-span-10 div{
+  color: #000 !important;
+}
+.mega-menu {
+  position: fixed;
+  top: 70px;
+  z-index: 1000;
+  left: 50%;
+  transform: translateX(-50%) translateY(-10px);
+  width: 100%;
+  max-width: 1000px;
+  border: 1px solid #000;
+  margin: auto;
+  background-color: #fff;
+  flex-wrap: wrap;
+  gap: 20px;
+  opacity: 0;
+  display: flex;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.mega-menu.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(-50%) translateY(0);
+}
+
+
+
+/* Listings Section */
+.listings {
+  flex: 1;
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  min-width: 300px;
+}
+
+.listings .title {
+  font-weight: bold;
+  margin: 0px;
+  font-size: 16px;
+  padding: 15px 0px;
+
+  border-bottom: 1px solid #ccc ;
+
+}
+
+.listings-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+}
+
+.column {
+  flex: 1;
+  min-width: 150px;
+}
+.column a:not(:last-child){
+  border-bottom: 1px solid #ccc ;
+
+}
+.column a {
+  text-decoration: none;
+  color: grey;
+  display: block;
+font-weight: 400;
+  padding: 15px 0;
+font-size: 14px;
+}
+.column a:hover{
+  color: #000;
+}
+
+/* Image Card */
+.image-card {
+  flex: 0.3;
+  background: #e3f2fd;
+  border-radius: 8px;
+  padding: 15px;
+  text-align: center;
+  margin: 15px;
+  height: 300px;
+  max-width: 220px;
+}
+
+.image-card img {
+  width: 100%;
+  border-radius: 8px;
+}
+
+.image-card a {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #000;
+}
+
+/* Responsive Design */
+@media (max-width: 992px) {
+  .mega-menu {
+      flex-direction: column;
+      display: none !important;
+  }
+
+  .listings, .image-card {
+      width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .listings-wrapper {
+      flex-direction: column;
+  }
+
+  .column {
+      width: 100%;
   }
 }
