--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,14 @@ body {
     font-family: 'Public Sans' !important;
     color: #000;
     margin: 0;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
   }
+  html{
+    height: 100%;
+  }
+
   
   /* Header-specific styles */
   .hero-container {
@@ -346,6 +353,15 @@ body {
   }
 
 @media (max-width: 768px) {
+  .dvc-firpta h6{
+    font-size: 20px !important;
+  }
+  .dvc-firpta p{
+    font-size: 14px !important;
+  }
+  .dvc-firpta h5{
+    font-size: 18px !important;
+  }
   .header img{
     height: 40px !important;
   }
@@ -696,12 +712,13 @@ width: 300px;
   background-color: #4674C6;
   color: #fff;
   font-style: italic;
-  height: 34px;
+  height: fit-content;
   padding: 0px 8px;
   border: none;
   outline: none;
   width: 100px;
   border-radius: 8px;
+  font-size: 14px;
   font-weight: 600;
   margin-bottom: 2px;
 }
@@ -1181,6 +1198,7 @@ cursor: pointer;
 
 
 .app-footer {
+  margin-top: auto;
   background-color: #0a3a6a;
   color: #ffffff;
   /* font-family: 'Open Sans', sans-serif; */
@@ -1469,6 +1487,7 @@ h2 , h1{
   margin-bottom: 10px;
   font-family: "Public Sans";
   color: #000;
+
   text-transform: uppercase;
   font-size: 30px;
 }
@@ -1563,6 +1582,30 @@ width: 95%;
   padding-top: 60px;
   padding-bottom: 80px;
 }
+.resorts_main{
+  padding-top: 40px;
+  padding-bottom: 50px;
+}
+.main-title{
+  color: #4674C6 !important;
+  font-size: 30px ;
+  line-height: 2rem ;
+  font-weight: 800 ;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.resorts_main h2{
+  color: #4674C6 !important;
+  font-size: 30px ;
+  line-height: 2rem ;
+  font-weight: 800 ;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 40px;
+  text-align: center;
+}
 .resort_1 h2{
   color: #4674C6 !important;
     font-size: 30px ;
@@ -1624,4 +1667,570 @@ width: 95%;
   height: 2px;
   width: 100%;
   /* border-radius: 4px; */
+}
+.lowest-commission-section h5{
+  text-align: center;
+  color: rgb(97 146 53);
+  font-size: 36px;
+  font-family: "Poppins";
+  font-weight: 600;
+}
+.lowest-commission-section h6{
+  font-weight: 600;
+  color: rgb(31, 78, 121);
+  font-size: 20px;
+  text-align: center;
+  margin-top: 15px;
+}
+.lowest-commission-section p{
+  color:  #4674C6;
+  font-size: 18px;
+  line-height: 1.6rem ;
+  font-weight: 500 ;
+  
+}
+.compare-dvc-broker p{
+  color:  #4674C6;
+  font-size: 18px;
+  line-height: 1.6rem ;
+  font-weight: 500 ;
+}
+.lowest-commission-section button{
+  padding-top: .375rem;
+  padding-bottom: .375rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background-color: rgb(97 146 53);
+  border-radius: .25rem;
+  cursor: pointer;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  border: none;
+  outline: none;
+  font-weight: 600;
+  margin: 0 auto;
+  color: #fff;
+
+}
+
+.slider-wrapper {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+  padding: 20px;
+}
+
+.slider-container {
+  position: relative;
+  width: 100%;
+}
+
+.slider-label {
+  position: absolute;
+  top: 5px;
+  background-color: #f7f2e1!important;
+  padding: 0px 8px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-weight: 500;
+  color: #4674C6;
+  font-size: 14px;
+  border: 2px solid #28527b !important;
+  white-space: nowrap;
+  transform: translateX(-50%);
+  transition: left 0.1s;
+  z-index: 5;
+}
+.slider-label::after{
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%);
+  height: 0;
+  width: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px;
+  border-top-color: inherit;
+  content: "";
+    position: absolute;
+}
+input[type="range"].styled-slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background: linear-gradient(to right, #9CD5FD 0%, #9CD5FD 50%, #f5f5f5 50%, #f5f5f5 100%);
+  border-radius: 5px;
+  outline: none;
+  margin: 50px 0 10px 0;
+  position: relative;
+  z-index: 2;
+}
+
+input[type="range"].styled-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 22px;
+  height: 22px;
+  background: #ffffff;
+  border: 3px solid #007bff;
+  border-radius: 50%;
+  cursor: pointer;
+  margin-top: -6px;
+  position: relative;
+  z-index: 3;
+}
+
+input[type="range"].styled-slider::-moz-range-thumb {
+  width: 22px;
+  height: 22px;
+  background: #ffffff;
+  border: 3px solid #007bff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.ticks-container {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  margin-top: -20px;
+}
+
+.tick {
+  position: absolute;
+  width: 2px;
+  height: 20px;
+  bottom: 14px;
+  background-color: #e6e6e6;
+  z-index: 1;
+  transition: background-color 0.3s;
+}
+
+.min-max-labels {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  color: #7a7a7a;
+  margin-top: -10px;
+}
+
+
+@media screen and (max-width: 576px) {
+  .compare-dvc-broker .checkboxes{
+    flex-direction: column;
+  }
+  .slider-label {
+    font-size: 12px;
+    padding: 3px 8px;
+  }
+  .compare-dvc-broker .compare-boxes-parent{
+    grid-template-columns:repeat(1, minmax(0, 1fr)) !important;
+    width: 100% !important;
+  }
+}
+  .compare-dvc-broker .compare-boxes-parent .box{
+    background-color: #e4f0f5;
+    cursor: pointer;
+    text-align: center;
+    padding: .25rem .75rem;
+    min-height: 180px;
+    border-radius: .25rem;
+    border:1px solid rgb(35 82 124);
+  }
+  .compare-dvc-broker .compare-boxes-parent{
+    gap: 1.25rem;
+    display: grid
+;grid-template-columns:repeat(4, minmax(0, 1fr));
+width: 91.666667%;
+
+  }
+  .compare-dvc-broker .compare-boxes-parent .box h6{
+    font-size: 24px;
+    color: #4674C6;
+
+  }
+  .compare-dvc-broker .compare-boxes-parent .box p span{
+color: rgb(97 146 53);
+  }
+  .compare-dvc-broker .compare-boxes-parent .box p{
+    margin-bottom: 0px;
+    font-size: 20px;
+  }
+  .compare-dvc-broker .compare-boxes-parent .box:hover{
+
+    transform: translate(0px) rotate(0deg) skew(0deg, 0deg) skewY(0deg) scaleX(1.00877) scaleY(1.00877);
+    background-color: rgb(51 122 183);
+    transition: all .1s ease-in-out;
+  }
+  .compare-dvc-broker .compare-boxes-parent .box:hover p{
+    color: #fff;
+  }    .compare-dvc-broker .compare-boxes-parent .box:hover h6{
+    color: #fff;
+  }
+  .compare-dvc-broker .checkboxes{
+    margin-top: 2rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  .compare-dvc-broker .checkboxes input{
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
+    position: relative;
+    top: 3px;
+  }
+  .compare-dvc-broker .checkboxes label{
+color: #4674C6;
+  }
+  .compare-dvc-broker .description button , .cost-to-sell-dvc button{
+    padding-top: .375rem;
+    padding-bottom: .375rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    background-color: #4674C6;
+    border-radius: .25rem;
+    cursor: pointer;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    border: none;
+    outline: none;
+    font-weight: 600;
+    margin-top: 20px;
+    margin: 0 auto;
+    color: #fff;
+
+  }
+  .compare-dvc-broker .description p strong{
+    color: rgb(234 133 28)
+  }
+  @media only screen and (max-width:600px){
+    .compare-dvc-broker p{
+font-size: 14px !important;
+    }
+  }
+  .compare-dvc-broker  .image-area img{
+    margin-top: 20px;
+    width: 100%;
+  }
+  .cost-to-sell-dvc h6{
+    color: rgb(31 78 121);
+    text-transform: uppercase;
+    text-align: center;
+    font-size:20px; 
+  }
+  .fees-section {
+    padding: 40px 15px;
+    text-align: center;
+}
+
+.fees-heading {
+    color: #004680;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+.fee-card {
+    background-color: #e9f3f9;
+    padding: 40px 25px 30px 25px;
+    border-radius: 10px;
+    position: relative;
+    text-align: center;
+    height: 100%;
+}
+
+.fee-number {
+    background-color: #f90;
+    color: #fff;
+    font-weight: bold;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50%;
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.fee-title {
+    color: #f90;
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
+.fee-price {
+    color: #f90;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.fee-definition {
+    font-style: italic;
+    color: #444;
+    margin-bottom: 15px;
+}
+
+.fee-description {
+    color: #005c85;
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+@media (max-width: 767px) {
+
+  .table-container{
+    padding: 5px !important;
+  }
+  .firpta-table{
+    width: 100% !important;
+  }
+  .firpta-table th {
+    font-size: 12px !important;
+  }
+  .firpta-table td{
+    font-size: 12px !important;
+  }
+  .cost-to-sell-dvc .instruction-text{
+    padding: 0px !important;
+    font-size: 14px !important;
+  }
+    .fee-card {
+        margin-bottom: 30px;
+    }
+    .harpta-section p{
+      font-size: 14px !important;
+    }
+    .how-dvc-works .box .text-section p {
+      font-size: 14px !important;
+    }
+}
+.cost-to-sell-dvc .instruction-text{
+  font-size: 18px;
+  color: #004680;
+  margin-top: 20px;
+  padding: 0 20px;
+}
+.harpta-section h4{
+  color: #7F7F7F ;
+  font-size: 28px ;
+  line-height: 2rem ;
+  margin-top: 15px;
+  font-weight: 400 ;
+  font-family: "Poppins";
+}
+.harpta-section p {
+  color: #4674C6 !important;
+    font-size: 18px ;
+    line-height: 1.6rem;
+    font-weight: 500 ;
+}
+.how-long-to-sell-dvc .video-area video{
+  width: 100%;
+}
+.how-dvc-works .video-container video{
+  width: 100%;
+}
+
+.how-dvc-works .box-container {
+  max-width: 1200px;
+  margin: 50px auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.how-dvc-works .box {
+  display: flex;
+  justify-content: space-between;
+  background-color: #e9f3f9;
+  border-radius: 5px;
+  overflow: hidden;
+  height: 300px;
+  transition: height 0.5s ease;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
+.how-dvc-works .box.expanded {
+  height: 600px;
+}
+
+.how-dvc-works .box .text-section {
+  padding: 20px;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.how-dvc-works .box .text-section h4 {
+  color: #7F7F7F !important;
+  font-size: 22px ;
+  line-height: 2rem !important;
+  font-family: "Poppins";
+  font-weight: 400 !important;
+}
+
+.how-dvc-works .box .text-section p {
+  color: #00739A !important;
+  font-size: 18px ;
+  line-height: 1.6rem !important;
+  font-weight: 500 !important;
+}
+
+.how-dvc-works .box .image-section {
+  width: 40%;
+  overflow: hidden;
+}
+
+.how-dvc-works .box .image-section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.how-dvc-works .read-more-btn {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  background-color: #fff;
+  border: 1px solid rgb(234 133 28 );
+  color: #4674C6;
+  font-size: 14px;
+  
+  padding: 5px 15px;
+  font-weight: 600;
+  border-radius: .25rem;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.how-dvc-works .read-more-btn:hover {
+  background-color: #014e69;
+  color: #fff;
+}
+.dvc-firpta h6{
+  color: rgb(234 133 28);
+  font-size: 24px;
+  font-family: "Poppins";
+  line-height: 32px;
+  margin-top: 10px;
+}
+.dvc-firpta  p{
+  font-size: 18px;
+  font-weight: 500;
+  color: #4674C6;
+  line-height: 25.6px;
+}
+.dvc-firpta h5{
+  color: rgb(31, 78, 121);
+font-size: 24px;
+}
+.firpta-table{
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.firpta-table th {
+  background-color: #4674C6 !important;
+  color: #fff !important;
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 16px; 
+  border: none;
+  text-align: center;
+  vertical-align: middle;
+}
+.firpta-table thead{
+background-color: #4674C6 !important; 
+}
+.firpta-table tr:nth-child(even){
+  background-color: rgb(235, 240, 250) !important;
+}
+
+.firpta-table td {
+  text-align: center;
+  vertical-align: middle;
+  color: rgb(31, 78, 121);
+  font-size: 16px;
+}
+
+.highlight-row {
+  background-color: #e6f0f5;
+}
+
+.no-border {
+  border: none !important;
+}
+
+.custom-cell-padding {
+  padding: 12px 8px;
+}
+.disney-vacation-checklist p , .dvc-financing-section P{
+  font-size: 18px;
+  font-weight: 500;
+  color: #4674C6;
+  line-height: 25.6px; 
+}
+.disney-vacation-checklist h6{
+  color: rgb(255 165 0);
+  line-height: 2rem;
+  font-size: 20px;
+  margin-bottom: 12px;
+  font-family: "Poppins";
+  font-weight: 600;
+}
+.dvc-financing-section h6 {
+  color: rgb(255 165 0);
+  line-height: 2rem;
+  font-size: 20px;
+  margin-bottom: 12px;
+  font-family: "Poppins";
+  font-weight: 600;
+  text-align: center;
+}
+@media only screen and (max-width:770px){
+  .disney-vacation-checklist h6{
+    font-size: 18px !important;
+  }
+  .disney-vacation-checklist p , .dvc-financing-section p  ,.resale-restrictions p{
+    font-size: 14px !important;
+  }
+  .resale-restrictions h4{
+    font-size: 22px !important;
+  }
+}
+.resale-restrictions .video-container video{
+width: 100%;
+height: 100vh;
+
+}
+.resale-restrictions .video-container-two{
+display: flex;
+justify-content: end;
+  margin-bottom:100px;
+  width: 100%;
+}
+.resale-restrictions p{
+  font-size: 18px;
+  font-weight: 500;
+  color: #4674C6;
+  line-height: 25.6px; 
+}
+.resale-restrictions h4{
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: #4674C6;
 }
