--- a/assets/style.css
+++ b/assets/style.css
@@ -2210,7 +2210,18 @@ background-color: #4674C6 !important;
   .resale-restrictions h4{
     font-size: 22px !important;
   }
-}
+  .dvc-special-request .step-box{
+    width: 100% !important;
+  }
+  .dvc-special-request p{
+    font-size: 18px !important;
+  }
+  .image-container img{
+    width: 100% !important;
+  }
+  .dvc-special-request .step-parent {
+flex-wrap: wrap;
+}}
 .resale-restrictions .video-container video{
 width: 100%;
 height: 100vh;
@@ -2233,4 +2244,13 @@ justify-content: end;
   font-weight: 700;
   margin-bottom: 20px;
   color: #4674C6;
+}
+.dvc-special-request p{
+  color: rgb(255 165 0);
+  line-height: 2rem;
+  font-size: 24px;
+  margin-bottom: 12px;
+  font-family: "Poppins";
+  font-weight: 500;
+  text-align: center;
 }
