--- a/assets/style.css
+++ b/assets/style.css
@@ -874,6 +874,15 @@ font-size: 14px;
 
 /* Responsive Design */
 @media (max-width: 992px) {
+  .resale-restrictions .video-container-two{
+    justify-content: center !important;
+  }
+  .restriction-container{
+    flex-wrap: wrap;
+  }
+  .resale-restrictions .part-1  , .resale-restrictions .part-2{
+    width: 100% !important;
+  } 
   .mega-menu {
       flex-direction: column;
       display: none !important;
@@ -2253,4 +2262,23 @@ justify-content: end;
   font-family: "Poppins";
   font-weight: 500;
   text-align: center;
+}
+.restriction-container{
+  display: flex;
+  margin-top: 30px;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.resale-restrictions .part-1 {
+  width: 45%;
+}
+.resale-restrictions .part-2{
+width: 50%;
+}
+.resale-restrictions .part-1  h4{
+  font-weight: 700;
+font-family: "Poppins";
+}
+.resale-restrictions .part-1 p strong{
+  font-family: "Poppins";
 }
